// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MUI Components Visual Regression Tests CircularIndeterminate should render loading spinner correctly 1`] = `
<div
  class="MuiBox-root css-15jfdev"
>
  <span
    class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1wxecgq-MuiCircularProgress-root"
    role="progressbar"
    style="width: 40px; height: 40px; color: rgb(52, 152, 219);"
  >
    <svg
      class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
        cx="44"
        cy="44"
        fill="none"
        r="20"
        stroke-width="4"
      />
    </svg>
  </span>
</div>
`;

exports[`MUI Components Visual Regression Tests List should render List component correctly with genre 1`] = `
<div
  class="MuiBox-root css-15jfdev"
>
  <span
    class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1wxecgq-MuiCircularProgress-root"
    role="progressbar"
    style="width: 40px; height: 40px; color: rgb(52, 152, 219);"
  >
    <svg
      class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
        cx="44"
        cy="44"
        fill="none"
        r="20"
        stroke-width="4"
      />
    </svg>
  </span>
</div>
`;

exports[`MUI Components Visual Regression Tests List should render List component correctly without genre 1`] = `
<div
  class="MuiBox-root css-15jfdev"
>
  <span
    class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1wxecgq-MuiCircularProgress-root"
    role="progressbar"
    style="width: 40px; height: 40px; color: rgb(52, 152, 219);"
  >
    <svg
      class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
        cx="44"
        cy="44"
        fill="none"
        r="20"
        stroke-width="4"
      />
    </svg>
  </span>
</div>
`;

exports[`MUI Components Visual Regression Tests ListItem should render list item correctly 1`] = `
<main
  class="poem__detail"
>
  <section
    class="poem__block"
    id="poem__block"
  >
    <section>
      <a
        class="poem__title"
        href="/detail/test-poem-id"
      >
        Test Poem
      </a>
      <div
        class="poem__author-container"
      >
        <a
          href="/authors/testuser"
        >
          <img
            alt="testuser"
            class="poem__picture"
            loading="lazy"
            src="test-pic.jpg"
          />
        </a>
        <a
          class="poem__author"
          href="/authors/testuser"
        >
          testuser
        </a>
      </div>
      <div
        class="poem__date"
      >
        01/01/2024 01:00h
      </div>
    </section>
    <section>
      <div
        class="poem__content poems__content"
      >
        Test poem content
      </div>
      <div
        class="poems__read-more"
      >
        <a
          class="poems__read-more"
          href="/detail/test-poem-id"
        >
          Read more
        </a>
      </div>
    </section>
    <section
      class="poem__footer"
    >
      <div
        class="poem__likes"
      >
        0
         
        Likes
      </div>
      <div
        class="separator"
      />
      <button
        aria-label="Edit poem"
        class="poem__edit-icon"
        data-testid="edit-poem"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="EditIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
          />
        </svg>
      </button>
      <button
        aria-label="Delete poem"
        class="poem__delete-icon"
        data-testid="delete-poem"
        style="fill: red;"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="HighlightOffSharpIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M14.59 8 12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
          />
        </svg>
      </button>
      <a
        aria-label="View comments"
        class="poem__comments-icon"
        href="/detail/test-poem-id"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="SubjectSharpIcon"
          focusable="false"
          style="fill: #000;"
          viewBox="0 0 24 24"
        >
          <path
            d="M14 17H4v2h10zm6-8H4v2h16zM4 15h16v-2H4zM4 5v2h16V5z"
          />
        </svg>
      </a>
    </section>
  </section>
</main>
`;

exports[`MUI Components Visual Regression Tests ListItem should render list item with likes correctly 1`] = `
<main
  class="poem__detail"
>
  <section
    class="poem__block"
    id="poem__block"
  >
    <section>
      <a
        class="poem__title"
        href="/detail/test-poem-id"
      >
        Test Poem
      </a>
      <div
        class="poem__author-container"
      >
        <a
          href="/authors/testuser"
        >
          <img
            alt="testuser"
            class="poem__picture"
            loading="lazy"
            src="test-pic.jpg"
          />
        </a>
        <a
          class="poem__author"
          href="/authors/testuser"
        >
          testuser
        </a>
      </div>
      <div
        class="poem__date"
      >
        01/01/2024 01:00h
      </div>
    </section>
    <section>
      <div
        class="poem__content poems__content"
      >
        Test poem content
      </div>
      <div
        class="poems__read-more"
      >
        <a
          class="poems__read-more"
          href="/detail/test-poem-id"
        >
          Read more
        </a>
      </div>
    </section>
    <section
      class="poem__footer"
    >
      <div
        class="poem__likes"
      >
        3
         
        Likes
      </div>
      <div
        class="separator"
      />
      <button
        aria-label="Edit poem"
        class="poem__edit-icon"
        data-testid="edit-poem"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="EditIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
          />
        </svg>
      </button>
      <button
        aria-label="Delete poem"
        class="poem__delete-icon"
        data-testid="delete-poem"
        style="fill: red;"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="HighlightOffSharpIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M14.59 8 12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
          />
        </svg>
      </button>
      <a
        aria-label="View comments"
        class="poem__comments-icon"
        href="/detail/test-poem-id"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="SubjectSharpIcon"
          focusable="false"
          style="fill: #000;"
          viewBox="0 0 24 24"
        >
          <path
            d="M14 17H4v2h10zm6-8H4v2h16zM4 15h16v-2H4zM4 5v2h16V5z"
          />
        </svg>
      </a>
    </section>
  </section>
</main>
`;

exports[`MUI Components Visual Regression Tests MyFavouritePoems should render MyFavouritePoems component correctly 1`] = `
<div
  class="MuiBox-root css-15jfdev"
>
  <span
    class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1wxecgq-MuiCircularProgress-root"
    role="progressbar"
    style="width: 40px; height: 40px; color: rgb(52, 152, 219);"
  >
    <svg
      class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
        cx="44"
        cy="44"
        fill="none"
        r="20"
        stroke-width="4"
      />
    </svg>
  </span>
</div>
`;

exports[`MUI Components Visual Regression Tests MyPoems should render MyPoems component correctly 1`] = `
<div
  class="MuiBox-root css-15jfdev"
>
  <span
    class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1wxecgq-MuiCircularProgress-root"
    role="progressbar"
    style="width: 40px; height: 40px; color: rgb(52, 152, 219);"
  >
    <svg
      class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
        cx="44"
        cy="44"
        fill="none"
        r="20"
        stroke-width="4"
      />
    </svg>
  </span>
</div>
`;

exports[`MUI Components Visual Regression Tests PoemFooter should render poem footer correctly 1`] = `
<section
  class="poem__footer"
>
  <div
    class="poem__likes"
  >
    0
     
    Likes
  </div>
  <div
    class="separator"
  />
  <button
    aria-label="Edit poem"
    class="poem__edit-icon"
    data-testid="edit-icon"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
      data-testid="EditIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
      />
    </svg>
  </button>
  <button
    aria-label="Delete poem"
    class="poem__delete-icon"
    data-testid="delete-icon"
    style="fill: red;"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
      data-testid="HighlightOffSharpIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M14.59 8 12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
      />
    </svg>
  </button>
  <a
    aria-label="View comments"
    class="poem__comments-icon"
    href="/detail/test-poem-id"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
      data-testid="SubjectSharpIcon"
      focusable="false"
      style="fill: #000;"
      viewBox="0 0 24 24"
    >
      <path
        d="M14 17H4v2h10zm6-8H4v2h16zM4 15h16v-2H4zM4 5v2h16V5z"
      />
    </svg>
  </a>
</section>
`;

exports[`MUI Components Visual Regression Tests ProfileTabs should render profile tabs correctly 1`] = `
<section
  class="profile__outro"
>
  <div
    class="profile__tabs-header"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorDefault MuiAppBar-positionStatic css-12ysj7f-MuiPaper-root-MuiAppBar-root"
      style="--Paper-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiTabs-root css-jhczcq-MuiTabs-root"
      >
        <div
          class="MuiTabs-scroller MuiTabs-fixed css-s2t35c-MuiTabs-scroller"
          style="overflow: hidden; margin-bottom: 0px;"
        >
          <div
            aria-label="full width tabs example"
            class="MuiTabs-list MuiTabs-flexContainer css-hzcega-MuiTabs-list"
            role="tablist"
          >
            <button
              aria-controls="full-width-tabpanel-0"
              aria-selected="true"
              class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary MuiTab-fullWidth Mui-selected css-hmk518-MuiButtonBase-root-MuiTab-root"
              id="full-width-tab-0"
              role="tab"
              tabindex="0"
              type="button"
            >
              My poems
            </button>
            <button
              aria-controls="full-width-tabpanel-1"
              aria-selected="false"
              class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary MuiTab-fullWidth css-hmk518-MuiButtonBase-root-MuiTab-root"
              id="full-width-tab-1"
              role="tab"
              tabindex="-1"
              type="button"
            >
              My favourite poems
            </button>
          </div>
          <span
            class="MuiTabs-indicator css-1qltlow-MuiTabs-indicator"
            style="left: 0px; width: 0px;"
          />
        </div>
      </div>
    </header>
  </div>
  <div
    class="profile__tabs-content"
  >
    <div
      aria-labelledby="full-width-tab-0"
      class="profile__myPoems"
      dir="ltr"
      id="full-width-tabpanel-0"
      role="tabpanel"
    >
      <div
        class="MuiBox-root css-19kzrtu"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
        >
          <div
            class="list__intro"
          >
            <div
              class="search-input__container"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium search-input__icon css-1umw9bq-MuiSvgIcon-root"
                data-testid="SearchIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
                />
              </svg>
              <input
                aria-label="Search an author"
                class="search-input__field"
                placeholder="Search an author"
                type="text"
              />
            </div>
          </div>
          <div
            style="height: 20px;"
          />
        </p>
      </div>
    </div>
    <div
      aria-labelledby="full-width-tab-1"
      class="profile__myPoems"
      dir="ltr"
      hidden=""
      id="full-width-tabpanel-1"
      role="tabpanel"
    />
  </div>
</section>
`;

exports[`MUI Components Visual Regression Tests Ranking should render ranking table correctly 1`] = `
<main
  class="ranking"
>
  <h3
    class="ranking__title"
  >
    Poets ranking
  </h3>
  <h5
    class="ranking__subtitle"
  >
    3 points per poem, 1 per like
  </h5>
  <ol
    class="ranking__list"
  />
</main>
`;

exports[`MUI Components Visual Regression Tests SimpleAccordion should render accordion correctly 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters accordion css-1808mag-MuiPaper-root-MuiAccordion-root"
  style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
>
  <h3
    class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
  >
    <button
      aria-controls="panel1a-content"
      aria-expanded="false"
      class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-1f1pi2l-MuiButtonBase-root-MuiAccordionSummary-root"
      id="panel1a-header"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-yfrx4k-MuiAccordionSummary-content"
      >
        <div
          class="header__dropdown-categories-icon"
        />
        <p
          class="header__dropdown-categories"
        >
          Categories
        </p>
      </span>
      <span
        class="MuiAccordionSummary-expandIconWrapper css-1wqf3nl-MuiAccordionSummary-expandIconWrapper"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="ExpandMoreIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
        </svg>
      </span>
    </button>
  </h3>
  <div
    class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-cwrbtg-MuiCollapse-root"
    style="min-height: 0px;"
  >
    <div
      class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
    >
      <div
        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
      >
        <div
          aria-labelledby="panel1a-header"
          class="MuiAccordion-region css-at4ued-MuiAccordion-region"
          id="panel1a-content"
          role="region"
        >
          <div
            class="accordion__list"
          >
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/america"
              >
                America
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/animal"
              >
                Animal
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/arts-and-sciences"
              >
                Arts & Sciences
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/beauty"
              >
                Beauty
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/childhood"
              >
                Childhood
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/children"
              >
                Children
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/death"
              >
                Death
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/family"
              >
                Family
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/friendship"
              >
                Friendship
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/history-and-politics"
              >
                History & Politics
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/humor"
              >
                Humor
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/life"
              >
                Life
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/living"
              >
                Living
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/loss"
              >
                Loss
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/love"
              >
                Love
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/marriage"
              >
                Marriage
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/memory"
              >
                Memory
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/nature"
              >
                Nature
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/philosophy"
              >
                Philosophy
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/religion"
              >
                Religion
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/social-commentaries"
              >
                Social Commentaries
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/sorrow-and-grieving"
              >
                Sorrow & Grieving
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/spiritual"
              >
                Spiritual
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/teen"
              >
                Teen
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/time"
              >
                Time
              </a>
            </div>
            <div
              class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
            >
              <a
                class="header__dropdown-subcategories"
                href="/war"
              >
                War
              </a>
            </div>
          </div>
          <div
            class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
          >
            <a
              class="header__dropdown-subcategories active"
              href="/"
            >
              All
            </a>
          </div>
          <div
            class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
          >
            <button
              class="header__dropdown-subcategories authors-accordion__browse-all"
            >
              Browse all categories →
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MUI Components Visual Regression Tests TabPanel should not render tab panel when not selected 1`] = `
<div
  aria-labelledby="full-width-tab-1"
  hidden=""
  id="full-width-tabpanel-1"
  role="tabpanel"
/>
`;

exports[`MUI Components Visual Regression Tests TabPanel should render tab panel when selected 1`] = `
<div
  aria-labelledby="full-width-tab-0"
  id="full-width-tabpanel-0"
  role="tabpanel"
>
  <div
    class="MuiBox-root css-19kzrtu"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
    >
      <div>
        Test Content
      </div>
    </p>
  </div>
</div>
`;
